--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
                 ECR_REPOSITORY = credentials('ECR_REPOSITORY')
                 AWS_ACCOUNT_ID = credentials('AWS_ACCOUNT_ID')
                 AWS_ACCESS_KEY_ID = credentials('AWS_ACCESS_KEY_ID')
-                AWS_SECRET_ACCESS_KEY_ID = credentials('AWS_SECRET_ACCESS_KEY_ID')
+                AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
                 IMAGE_TAG = 'latest'
              }
             steps 
