--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -63,4 +63,11 @@ pipeline {
             }
         }
     }
+
+    post {
+        always
+        {
+            sh 'docker image prune -a -f'
+        }
+    }
 }
