--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -64,7 +64,10 @@ pipeline {
             {
                 
                 sshagent(['ssh_key']) {
-                    sh """ssh -o StrictHostKeyChecking=no -l ubuntu 15.206.122.83 'cd /home/ubuntu/ && pwd' """
+                    sh """ssh -o StrictHostKeyChecking=no -l ubuntu 15.206.122.83 'cd /home/ubuntu/ && 
+                    aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.ap-south-1.amazonaws.com &&
+                    docker run -d -p 8080:8080 ${ECR_REPOSITORY}:${IMAGE_TAG}' """
+        
                 }
             }
         }
